--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,41 +1,41 @@
-.container {
+.header {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container > img {
+.header > img {
     height: 3.75rem;
 }
 
-.container > header {
+.header > header {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 3.25rem 0;
 }
 
-.container > header button {
+.header > header button {
     background: transparent;
     border: none;
 }
 
-.container > header img:hover {
+.header > header img:hover {
     scale: 1.3;
 }
 
-.container > header img {
+.header > header img {
     height: 2rem;
     transition: scale 0.5s;
 }
 
-.container > header span {
+.header > header span {
     font-size: 1.12rem;
     color: #9b9b9b;
 }
 
-.container > header span strong {
+.header > header span strong {
     font-size: 1.37rem;
     color: #e8891c;
 }
