--- a/src/components/Letter/styles.module.css
+++ b/src/components/Letter/styles.module.css
@@ -11,3 +11,24 @@
     align-items: center;
     justify-content: center;
 }
+
+.smallLetter{
+    width: 2.75rem;
+    height: 2.75rem;
+    border-radius: 0.43rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    border: 1px solid #6363db;
+}
+
+.correctLetter{
+    background-color: #e1f5ec;
+    border-color: #03ab4f;
+    color: #03ab4f;
+}
+
+.wrongLetter{
+    background-color: #ffcf62;
+    border-color: #691b0a;
+    color: #691b0a;
+}
